# butido

./: .env  .gitlint  CHANGELOG.md  CHANGELOG.toml  CONTRIBUTING.md  Cargo.toml  README.md  bors.toml  build.rs  config.toml  deny.toml  rustfmt.toml  shell.nix
.builds/: ci.nix  debian.yml  nixos.yml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cargo.yml  ci.yml  commit-lint.yml
doc/: README.md  containers.md  datamodel.md  scripting.md
migrations/2020-10-29-132821_create_envvars/: down.sql  up.sql
migrations/2020-10-29-140235_create_githashes/: down.sql  up.sql
migrations/2020-10-29-140838_create_packages/: down.sql  up.sql
migrations/2020-10-29-140956_create_images/: down.sql  up.sql
migrations/2020-10-29-141023_create_submits/: down.sql  up.sql
migrations/2020-10-29-141904_create_endpoints/: down.sql  up.sql
migrations/2020-10-29-142339_create_artifacts/: down.sql  up.sql
migrations/2020-10-29-142443_create_jobs/: down.sql  up.sql
migrations/2020-10-29-142619_create_job_input_artifacts/: down.sql  up.sql
migrations/2020-10-29-142914_create_job_envs/: down.sql  up.sql
migrations/2020-10-29-143003_create_submit_envs/: down.sql  up.sql
migrations/2020-11-05-125716_drop_submit_buildplan/: down.sql  up.sql
migrations/2020-11-11-111013_job_output_artifacts/: down.sql  up.sql
migrations/2020-11-11-111326_job_has_multiple_outputs/: down.sql  up.sql
migrations/2020-11-13-161449_add_job_uuid/: down.sql  up.sql
migrations/2020-12-03-084509_artifact_release_flag/: down.sql  up.sql
migrations/2020-12-03-085333_artifact_belongs_to_job/: down.sql  up.sql
migrations/2020-12-14-100454_artifact-unique-by-job/: down.sql  up.sql
migrations/2020-12-14-113756_artifact_not_unique_by_path/: down.sql  up.sql
migrations/2021-01-07-122618_dedicated-releases-table/: down.sql  up.sql
migrations/2021-02-05-142606_remove-package-tree-json-from-submit/: down.sql  up.sql
migrations/2021-02-15-093619_rm-job-input-artefacts/: down.sql  up.sql
migrations/2021-02-15-094104_rm-job-output-artefacts/: down.sql  up.sql
migrations/2021-02-22-092534_add-release-stores/: down.sql  up.sql
scripts/: dev-pg-container.sh
src/: cli.rs  consts.rs  main.rs  schema.rs  ui.rs
src/commands/: build.rs  db.rs  dependencies_of.rs  endpoint.rs  endpoint_container.rs  env_of.rs  find_artifact.rs  find_pkg.rs  lint.rs  metrics.rs  mod.rs  release.rs  source.rs  tree_of.rs  util.rs  verify_sources.rs  versions_of.rs  what_depends.rs
src/commands/source/: download.rs  mod.rs
src/config/: configuration.rs  container_config.rs  docker_config.rs  endpoint_config.rs  mod.rs  not_validated.rs  util.rs
src/db/: cli.rs  connection.rs  find_artifacts.rs  interface.rs  mod.rs
src/db/models/: artifact.rs  endpoint.rs  envvar.rs  githash.rs  image.rs  job.rs  job_env.rs  mod.rs  package.rs  release_store.rs  releases.rs  submit.rs
src/endpoint/: configuration.rs  configured.rs  error.rs  manager.rs  managerconf.rs  mod.rs  scheduler.rs  util.rs
src/filestore/: artifact.rs  merged.rs  mod.rs  path.rs  release.rs  staging.rs  util.rs
src/job/: dag.rs  job.rs  mod.rs  resource.rs  runnable.rs  set.rs  tree.rs
src/log/: filesink.rs  item.rs  mod.rs  parser.rs  sink.rs  util.rs
src/orchestrator/: mod.rs  orchestrator.rs  util.rs
src/package/: dag.rs  dependency.rs  loader.rs  mod.rs  name.rs  package.rs  phase.rs  script.rs  source.rs  tree.rs  util.rs  version.rs
src/package/dependency/: build.rs  condition.rs  mod.rs  runtime.rs  system.rs  system_runtime.rs
src/phase/: mod.rs
src/repository/: fs.rs  mod.rs  pkg_toml_source.rs  repository.rs
src/repository/fs/: element.rs  mod.rs  path.rs  representation.rs
src/source/: mod.rs
src/ui/: mod.rs  package.rs
src/util/: docker.rs  env.rs  executor.rs  filters.rs  git.rs  mod.rs  parser.rs  progress.rs
tests/: cli.rs  common.rs
