[package]
name = "butido"
version = "0.4.0"
authors = [
  # Only for the current/active maintainers (sorted alphabetically by the surname)
  # All other authors are listed in the "Authors" section of README.md
  "Nico Steinle <nico.steinle@atos.net>", # @ammernico
  "Michael Weiss <michael.weiss@atos.net>", # @primeos-work
]
edition = "2021"
rust-version = "1.64.0" # MSRV
license = "EPL-2.0"

description = "Linux package tool utilizing Docker, PostgreSQL, and TOML"
homepage    = "https://github.com/science-computing/butido"
repository  = "https://github.com/science-computing/butido"
readme      = "README.md"
keywords    = ["docker", "postgres", "linux", "packaging", "packages"]
categories  = ["development-tools"]

[badges]
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow         = "1"
aquamarine     = "0.3"
ascii_table    = "4"
atty           = "0.2"
bytesize       = "1"
chrono         = "0.4"
clap           = { version = "4", features = ["cargo"] }
clap_complete  = "4"
colored        = "2"
config         = { version = "0.11", default-features = false, features = [ "toml" ] }
csv            = "1"
daggy          = { version = "0.8", features = [ "serde" ] }
dialoguer      = "0.10"
diesel         = { version = "1", features = ["postgres", "chrono", "uuid", "serde_json"] }
diesel_migrations = "1"
filters        = "0.4"
futures        = "0.3"
getset         = "0.1"
git2           = "0.17"
handlebars     = { version = "4", features = ["no_logging"] }
human-panic    = "1"
humantime      = "2"
indicatif      = "0.17"
indoc          = "2"
itertools      = "0.10"
lazy_static    = "1"
log            = "0.4"
parse-display  = "0.8"
pom            = "3"
ptree          = "0.4"
rayon          = "1"
regex          = "1"
reqwest        = { version = "0.11", features = [ "stream" ] }
resiter        = "0.4"
result-inspect = "0.2"
rlimit         = "0.9"
semver         = { version = "1", features = [ "serde" ] }
serde          = "1"
serde_json     = "1"
sha-1          = "0.10"
sha2           = "0.10"
shiplift       = "0.7"
syntect        = "5"
tar            = "0.4"
terminal_size  = "0.2"
tokio          = { version = "1", features = ["macros", "fs", "process", "io-util", "time"] }
tokio-stream   = "0.1"
typed-builder  = "0.14"
unindent       = "0.2"
url            = { version = "2", features = ["serde"] }
uuid           = { version = "0.6", features = ["serde", "v4"] }
walkdir        = "2"
which          = "4"
xdg            = "2"

# Hard-code rand to 0.4.3
#
# Reason for this is this dependency chain:
# diesel -> uuid (0.6) -> rand (0.4)
# but rand 0.4.5 depends on fuchsia-cprng which has an unclear license
# rand 0.4.4 is yanked, rand 0.4.3 does not contain this dependency.
#
# We do not explicitely need this dependency, we just want to force cargo not to
# link against rand 0.4.5 because of this licensing issue.
#
# The proper solution for this would be to update "uuid" in diesel or
# to update "rand" in uuid 0.6.
#
# Upstream issue: https://github.com/rust-random/rand/issues/1071
rand = "=0.4.3"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
toml = "0.7"

[build-dependencies]
anyhow = "1"
git_info = "0.1"
vergen = { version = "8", features = ["build", "cargo", "git", "gitcl"] }
