[package]
name = "butido"
version = "0.5.0"
authors = [
  # Only for the current/active maintainers (sorted alphabetically by the surname)
  # All other authors are listed in the "Authors" section of README.md
  "Nico Steinle <nico.steinle@eviden.com>", # @ammernico
  "Michael Weiss <michael.weiss@eviden.com>", # @primeos-work
]
edition = "2021"
rust-version = "1.80.0" # MSRV
license = "EPL-2.0"

description = "Linux package tool utilizing Docker, PostgreSQL, and TOML"
homepage    = "https://github.com/science-computing/butido"
repository  = "https://github.com/science-computing/butido"
readme      = "README.md"
keywords    = ["docker", "postgres", "linux", "packaging", "packages"]
categories  = ["development-tools"]

[badges]
maintenance = { status = "passively-maintained" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
aquamarine = "0.5"
ascii_table = { version = "4", features = ["color_codes", "wide_characters"] }
bytesize = "1"
chrono = "0.4"
clap = { version = "4", features = ["cargo"] }
clap_complete = "4"
colored = "2"
config = { version = "0.13", default-features = false, features = [ "toml" ] }
csv = "1"
daggy = { version = "0.8", features = [ "serde" ] }
dialoguer = "0.11"
diesel = { version = "2", features = ["postgres", "chrono", "uuid", "serde_json", "r2d2"] }
diesel_migrations = "2"
filters = "0.4"
futures = "0.3"
getset = "0.1"
git2 = "0.19"
handlebars = { version = "6", features = ["no_logging"] }
human-panic = "2"
humantime = "2"
indicatif = "0.17"
indoc = "2"
itertools = "0.13"
lazy_static = "1"
parse-display = "0.10"
petgraph = "0.6"
pom = "3"
ptree = { version = "0.5", default-features = false }
rand = "0.8"
rayon = "1"
regex = "1"
reqwest = { version = "0.12", features = [ "stream" ] }
resiter = "0.5"
rlimit = "0.10"
rustversion = "1"
serde = "1"
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
shiplift = "0.7"
syntect = "5"
tar = "0.4"
terminal_size = "0.4"
tokio = { version = "1", features = ["macros", "fs", "process", "io-util", "signal", "time"] }
tokio-util = "0.7"
tokio-stream = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-chrome = "0.7"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
typed-builder = "0.20"
unindent = "0.2"
url = { version = "2", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"
which = "6"
xdg = "2"

[build-dependencies]
anyhow = "1"
git_info = "0.1"
vergen = { version = "8", features = ["build", "cargo", "git", "gitcl"] }
